--- a/CONVERSA-07-News_01.html
+++ b/CONVERSA-07-News_01.html
@@ -85,6 +85,22 @@
                                                 <td width="100%" height="98" align="left" valign="top" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#333333; font-family: 'Open Sans', sans-serif; font-weight:normal; line-height:22px;"><b>O marketing de conteúdo é uma ferramenta fundamental</b> para ser relevante no mercado, mas você sabe como a produção de conteúdo impacta os resultados do seu negócio? Nós produzimos um artigo com base no relatório de tendências lançado pela Rock Content, um dos maiores hubs de produção de conteúdo do Brasil.
                                                 </td>
                                             </tr>
+                                            <tr>
+                                                <td width="100%" height="12" style="line-height:1px;">&nbsp;</td>
+                                            </tr>
+                                            <tr>
+                                                <td width="100%" style="line-height:1px;">
+                                                    <table align="center" border="0" cellpadding="0" width="100%" cellspacing="0" style="border-collapse: collapse;">
+                                                        <tbody>
+                                                            <tr>
+                                                                <td width="100%" height="40" bgcolor="" valign="middle" align="left" style="line-height:11px;"><a style="background: #e88100; padding: 5px 15px; color:#fff; font-size:13px; color:#fff; font-family: 'Open Sans', sans-serif; font-weight: bold; text-decoration: none" href="http://coletivoconversa.com.br/blog/como-a-producao-de-conteudo-impacta-os-resultados-do-seu-negocio/" >Leia no blog</a>
+                                                                </td>
+                                                                <td width="270" height="30" style="line-height:1px;">&nbsp;</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </td>
@@ -114,7 +130,24 @@
                     </table>
                 </td>
             </tr>
-            <!-- Mudou -->
+            <!-- botao Aqui -->
+            <tr>
+                <td width="100%" style="line-height:1px;">
+                    <table align="center" border="0" cellpadding="0" width="100%" cellspacing="0" style="border-collapse: collapse;">
+                        <tbody>
+                            <tr>
+                                <td width="100%" height="40" bgcolor="" valign="middle" align="center" style="line-height:11px;"><a style="background: #e88100; padding: 5px 15px; color:#fff; font-size:13px; color:#fff; font-family: 'Open Sans', sans-serif; font-weight: bold; text-decoration: none" href="http://coletivoconversa.com.br/blog/como-a-producao-de-conteudo-impacta-os-resultados-do-seu-negocio/" >Vamos conversar</a>
+                                </td>
+                                <td width="270" height="30" style="line-height:1px;">&nbsp;</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td width="100%" height="50" style="line-height:1px;">&nbsp;</td>
+            </tr>
+            <!-- Start Mudou -->
             <tr>
             	<td>
             		<table align="center" border="0" cellpadding="0" width="600" cellspacing="0" style="border-collapse:collapse" bgcolor="692478">
